# data-engineering-zoomcamp

./: .gitignore  README.md  io_config.yaml  metadata.yaml  pyproject.toml
.devcontainer/: requirements.txt
01-docker-terraform/: homework.md  question5.sql  question6.sql
01-docker-terraform/1_terraform_gcp/terraform/: variables.tf
01-docker-terraform/1_terraform_gcp/terraform/terraform_basic/: .gitignore  main.tf  variables.tf
01-docker-terraform/2_docker_sql/: Dockerfile  ingest_data.py  pipeline.py  upload-data.ipynb
02-workflow-orchestration/: homework.md
02-workflow-orchestration/green-taxi-etl/: .gitignore
02-workflow-orchestration/green-taxi-etl/green-taxi-etl/transformers/: add_lpep_pickup_date.py  rename_columns.py
02-workflow-orchestration/mage-zoomcamp/: main.tf  variables.tf
03-data-warehouse/: homework.md
03-data-warehouse/green-taxi-trips-2022/: Dockerfile  README.md  pyproject.toml
03-data-warehouse/green-taxi-trips-2022-dlt/: .gitignore  pyproject.toml
03-data-warehouse/green-taxi-trips-2022-dlt/.dlt/: config.template.toml
03-data-warehouse/green-taxi-trips-2022-dlt/green_taxi_trips_2022_dlt/: load_taxi_data.py
03-data-warehouse/green-taxi-trips-2022-dlt/src/green_taxi_trips/: __init__.py
03-data-warehouse/green-taxi-trips-2022/green-taxi-trips-2022/: io_config.yaml  metadata.yaml
03-data-warehouse/green-taxi-trips-2022/green-taxi-trips-2022/data_exporters/: export_to_gcp.py
03-data-warehouse/green-taxi-trips-2022/green-taxi-trips-2022/pipelines/green_taxi_trips_2022/: metadata.yaml
cohorts/2024/01-docker-terraform/: homework.md  question3.sql  question4.sql  question7.txt
cohorts/2024/01-docker-terraform/2_docker_sql/: .gitignore  Dockerfile  docker-compose.yaml  ingest_data.py  pg-test-connection.ipynb
cohorts/2024/02-workflow-orchestration/: homework.md
cohorts/2024/02-workflow-orchestration/green-taxi-etl/: .gitignore  Dockerfile  main.tf  variables.tf
cohorts/2024/02-workflow-orchestration/mage-zoomcamp/: .gitignore  main.tf
cohorts/2024/03-data-warehouse/: bigquery_queries.sql  homework.md  web_to_gcs.py
cohorts/2024/03-data-warehouse/green-taxi-trips-2022/: .gitignore  Dockerfile  pyproject.toml
cohorts/2024/03-data-warehouse/green-taxi-trips-2022-dlt/: .gitignore  load_taxi_data.py  pyproject.toml
cohorts/2024/03-data-warehouse/green-taxi-trips-2022-dlt/.dlt/: secrets.template.toml
cohorts/2024/04-analytics-engineering/: .gitignore  homework.md  main.tf  pipeline.py  requirements.txt  sandbox.ipynb  variables.tf
cohorts/2024/04-analytics-engineering/.dlt/: config.toml
cohorts/2024/04-analytics-engineering/dbt-taxi-rides-ny/: .sqlfluff  .sqlfluffignore  dbt_project.yml
cohorts/2024/04-analytics-engineering/ny_taxi_trips/: __init__.py  helpers.py  settings.py
cohorts/2024/04-analytics-engineering/pokemon/: __init__.py
cohorts/2024/05-batch/: .gitignore
cohorts/2024/05-batch/code/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  download_data.fish
data_loaders/: load_taxi_data.py
pipelines/green_taxi_etl/: metadata.yaml
transformers/: add_lpep_pickup_date.py  remove_zero_passengers_or_trip_distance.py  test_taxi_data.py  test_vendor_id_in_existing_values.py
(+24 files in other folders)
