[tool.poetry]
name = "data-engineering-zoomcamp-2024"
version = "0.1.0"
description = ""
authors = ["Vincent Ging Ho Yim <28189684+cenviity@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dlt = { extras = ["duckdb", "gs", "parquet"], version = "^0.4.4" }
enlighten = "^1.12.4"
ipykernel = "^6.29.2"
requests-cache = "^1.2.0"
streamlit = "^1.31.1"
dbt-bigquery = "^1.7.6"
sqlfluff = "^2.3.5"
shandy-sqlfmt = {extras = ["jinja"], version = "^0.21.2"}
sqlfluff-templater-dbt = "^2.3.5"
pyspark = "^3.5.1"


[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
