[tool.poetry]
name = "green-taxi-trips-2022-dlt"
version = "0.1.0"
description = ""
authors = ["Vincent Ging Ho Yim <cenviity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
dlt = {extras = ["duckdb", "gs", "parquet"], version = "^0.4.4"}
pandas = {extras = ["parquet"], version = "^2.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
