[tool.poetry]
name = "green-taxi-trips-2022-dlt"
version = "0.1.0"
description = ""
authors = ["Vincent Ging Ho Yim <cenviity@gmail.com>"]
readme = "README.md"
packages = [{ include = "green_taxi_trips", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
dlt = { extras = ["duckdb", "gs", "parquet"], version = "^0.4.4" }
pandas = { extras = ["parquet"], version = "^2.2.0" }

[tool.poetry.scripts]
load = "load_taxi_data:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
